# ideaFilaments

./: .pre-commit-config.yaml  CONTRIBUTING.md  ConsciousnessUniversalSubstrate.md  EnterpriseArchitectureOfReality.md  LICENSE  Magnetic-PlasmaSynergy.md  MagneticPlasmaConsciousnessRuliad.md  MagnetizedPlasmaCosmicNervous.md  QuantumExperiments.md  QuantumGeometricPhasesAndSymmetryTransitionsButSlightlyDifferent.md  QuantumMayhem.md  QuantumWhisperCoherence.md  README.md  TopologicalCoherenceMagnetohydrodynamic.md  checkRepo.py
articles/: README.md  agi_revolution.md  ai_art_ethics.md  decentralization.md  decentralized_dreams.md  entropy_information.md  lone_genius.md  paradox_of_choice.md  quantum_hype.md  quantum_narrative_emergence.md  why_we_scroll.md
celestialHarmonics/: .pre-commit-config.yaml  README.md  celestialMetrics.py  celestial_harmonics_report.py  environment.yml  pyproject.toml  quantum_report.py  requirements.txt
celestialHarmonics/analysis/: __init__.py  persistent_analyzer.py  quantum_analyzer.py
celestialHarmonics/archive/: celestialMetrics.py  celestial_harmonics_report.py
celestialHarmonics/category_theory/: derived.py  functors.py
celestialHarmonics/core/: __init__.py  celestial_point.py  pattern_types.py  phase_space.py  quantum_patterns.py
celestialHarmonics/core/quantum/: ergodicity.py  microlocal.py
celestialHarmonics/patterns/: __init__.py  base_pattern.py  chaos_patterns.py  geometric_patterns.py  resonance_patterns.py
celestialHarmonics/topology/: cech_complex.py  persistent_homology.py
celestialHarmonics/visualization/: quantum_viz.py
docs/: README.md  plasma_computing_manifesto.md  reality_stack.md  recursive_sapience_accord.md  technical_overview.md  weavers_codex.md  weavers_codex_absurdity_patch.md
experiments/: QuantumWhispers.md  README.md  TenExperimentalIdeas.md  biomimetic_implementation_topology.yml  kpz_noise_generator.py  plasma_quantum_visualization.py  quantum_bootstrap_whispers.py  quantum_protocol_topology.yml  quantum_whisper_topology.yml  symmetry_break_sim.py
papers/: README.md  (+42 more)
quantum_spectral_weaving/: 1.9.0  README.md  demo.py  pyproject.toml  setup.py  setup_env.ps1  setup_oneapi.ps1  setup_quantum_env.bat  simple_test.py  test_quantum.py  test_spectral.py
quantum_spectral_weaving/quantum_spectral_weaving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quantum_spectral_weaving/src/: __init__.py  bootstrap.py  complextensor.py  gauge_field.py  kpz_enhanced.py  quantum_shield.py  quantum_spectral_weaving.py  riemann_dynamics.py  spectral_weaving.py  su2_protect.py  types.py
quantum_spectral_weaving/src/quantum_spectral_weaving/: __init__.py  bootstrap.py  complextensor.py  quantum_shield.py  quantum_spectral_weaving.py  riemann_dynamics.py  spectral_weaving.py  types.py
quantum_spectral_weaving/tests/: __init__.py  test_quantum_stack.py
(+230 files in other folders)
