[tool.poetry]
name = "quantum-spectral-weaving"
version = "0.1.0"
description = "Exploring quantum dynamics inspired by the Riemann Hypothesis and topological protection."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "quantum_spectral_weaving", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.9.0"
numpy = ">=1.19.2"
scipy = ">=1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^3.2"
black = "^23.3.0"
ruff = "^0.0.260"
mypy = "^1.2.0"
types-requests = "^2.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
[[tool.mypy.overrides]]
module = 'complextensor'
ignore_missing_imports = true 